# nthlayer-override-adapter

./: .gitignore  CLAUDE.md  Dockerfile  README.md  override-adapter-config.yaml.example  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  test.yml
src/nthlayer_override_adapter/: __init__.py  app.py  cli.py  config.py  emission.py  metrics.py  response.py
src/nthlayer_override_adapter/routes/: canonical.py  webhook.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_emission.py  test_metrics.py  test_response.py  test_routes_canonical_batch.py  test_routes_canonical_single.py  test_routes_webhook.py
tests/fixtures/: adapter_config_jira.yaml  adapter_config_minimal.yaml
tests/smoke/: test_cli.py  test_imports.py
