[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-override-adapter"
version = "0.1.0"
description = "NthLayer override-event sidecar — HTTP → gen_ai.override OTel span bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nthlayer-common>=1.5.0,<2.0.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.21",
]

[project.scripts]
nthlayer-override-adapter = "nthlayer_override_adapter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.uv.sources]
nthlayer-common = { path = "../nthlayer-common", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
